# aurora_technical_test

./: .gitignore  LICENSE.txt  README.md  lint  pyproject.toml  requirements-dev.in  requirements-dev.txt  setup.cfg
src/: utils.py
src/battery_dispatch/: core.py
src/battery_dispatch/values/: battery.py  market.py
src/data/: half-hourly-data.csv  hourly-data.csv
tests/: data_builder.py  test_battery.py  test_battery_dispatch.py  test_market.py
