[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "battery_dispatch"
version = "0.1.0"
description = "Example battery dispatch system for Aurora"
authors = [
  { name="Ross McIntyre", email="rossnmcintyrework@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = []

[project.urls]
Homepage = "https://github.com/RossMcIntyre2/aurora_technical_test"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]