[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "battery_dispatch"
version = "0.1.0"
description = "Example battery dispatch system for Aurora"
authors = [
  { name="Ross McIntyre", email="rossnmcintyrework@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.3.3",
    "numpy==2.3.4",
]

[project.urls]
Homepage = "https://github.com/RossMcIntyre2/aurora_technical_test"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
exclude = '''
/(
    \.git
  | \.env
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
multi_line_output = 3
include_trailing_comma = true
skip = ["build", "dist", ".env"]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # whitespace before ':', conflicts with black
    "W503"   # line break before binary operator, conflicts with black
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".env"
]